# kosmiczna_magisterka

./: .gitignore  INA219.py  README.md  camera_server.py  camera_server2.py  camera_server3.py  camera_test.py  client.html  client1.html  client2.html  client3.html  client5.html  cmotor.py  fast_motor.c  fast_motor2.c  kosmiczna_magisterka.toml  mjpeg_nginx  motor-calibration.py  motor-cli.py  motor-test.py  motor.py  motor.service  motor2.py  motor_calibration.py  motor_cli.py  motor_server_test.py  motor_test.py  press.py  pyproject.toml  requirements.txt  restapi.py  udp_camera_receiver.py  webcam.py
not_used_anymore/: camera_server.py  client4.html  hold.py  pigs_help.sh  press.py  udp_camera_sender.py
webcam/: .gitignore  webcam.py
www/: index.html
