[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kosmiczna_magisterka"
version = "1.0.0"

[tool.setuptools]
ext-modules = [
  { name = "kosmiczna_magisterka.fast_motor", sources = ["fast_motor.c"], libraries = ["pigpio", "rt", "pthread"], extra-compile-args=["-O"]}
]
